SharedMemory: don't need exponentiation after all

--- a/frap_book.tex
+++ b/frap_book.tex
@@ -4189,7 +4189,7 @@ $$\infer{\tof{x \leftarrow c_1; c_2(x)}{n_1 + n_2 + 1}}{
   \tof{c_1}{n_1}
   & \forall r. \; \tof{c_2(r)}{n_2}
 }
-\quad \infer{\tof{c_1 || c_2}{2^{n_1 + n_2}}}{
+\quad \infer{\tof{c_1 || c_2}{n_1 + n_2 + 1}}{
   \tof{c_1}{n_1}
   & \tof{c_2}{n_2}
 }$$
